<resources>
    <string name="app_name">ElectivaAndroid</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="olvido_su_contrase_a">Olvido su contraseña?</string>
    <string name="registrese">Registrese</string>
    <string name="campos_vacios">Campos Vacios</string>
    <string name="registro">Registro</string>
    <string name="correo_electronico">correo electronico</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">nombre</string>
    <string name="correoEnviado">Correo Enviado satisfactoriamente</string>
    <string name="ErrorEnvioCorreo">Error al enviar email</string>
    <string name="red_no_activa">No es posible realizar la accion por que la red no esta activa</string>
    <string name="advertencia_red_no_activa">La red no esta activa, por favor revise sus conexiones</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="problema_de_internet">problemas de internet</string>
    <string name="no_create">No se ha podido crear usuario</string>
    <string name="facebook_app_id">1404500243028011</string>
    <string name="fb_login_protocol_scheme">fb1404500243028011</string>
    <string name="siguiente_ventana">Siguiente ventana</string>
</resources>
