<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Actividades.RegistroActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true" />

    <EditText
        android:id="@+id/registro_editext_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:text="carlos"
        android:layout_margin="10dp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/registro_editText_apellido"
        android:layout_width="match_parent"
        android:text="Quezada"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/apellido"
        android:layout_margin="10dp"
        android:inputType="textPersonName"/>


    <EditText
        android:id="@+id/registro_editText_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:text="atlesteban@gmail.com"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress" />



    <EditText
        android:id="@+id/registro_editText_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="carlangas"
        android:layout_margin="10dp"
        android:hint="@string/contrase_a"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registro_btn_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registro"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:text="@string/registro" />


</LinearLayout>